--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing=20>
     <tr>
-      <td><img src="pp Circle.png" alt="Chelsea ready for work"></td>
+      <td><img src="images/pp Circle.png" alt="Chelsea ready for work"></td>
       <td><h1>Who is Chelsea Frost?</h1>
       <p><em> Generalist at <a href="https://rootplatform.com">Root Platform </a>trying to <strong>learn more about the backbone of tech.</strong></em></p>
       <p>
